@@ -17,7 +17,38 @@ fi
 
 # Install dependencies
 echo "Installing dependencies"
-sudo apt-get install -y texinfo g++ libicu-dev libqt4-dev git-core libboost-dev libcppunit-dev libcv-dev libopencv-dev libgdal-dev liblog4cxx10-dev libnewmat10-dev libproj-dev python-dev libjson-spirit-dev automake1.11 protobuf-compiler libprotobuf-dev gdb libqt4-sql-psql libgeos++-dev swig lcov tomcat6 openjdk-6-jdk openjdk-6-dbg maven libstxxl-dev nodejs-dev nodejs-legacy doxygen xsltproc asciidoc pgadmin3 curl npm libxerces-c28 libglpk-dev libboost-all-dev source-highlight texlive-lang-all graphviz w3m python-setuptools python python-pip git ccache libogdi3.2-dev gnuplot python-matplotlib libqt4-sql-sqlite
+sudo apt-get install -y texinfo g++ libicu-dev libqt4-dev git-core libboost-dev libcppunit-dev libcv-dev libopencv-dev libgdal-dev liblog4cxx10-dev libnewmat10-dev libproj-dev python-dev libjson-spirit-dev automake1.11 protobuf-compiler libprotobuf-dev gdb libqt4-sql-psql libgeos++-dev swig lcov tomcat6 openjdk-7-jdk openjdk-7-dbg maven libstxxl-dev nodejs-dev nodejs-legacy doxygen xsltproc asciidoc pgadmin3 curl npm libxerces-c28 libglpk-dev libboost-all-dev source-highlight texlive-lang-all graphviz w3m python-setuptools python python-pip git ccache libogdi3.2-dev gnuplot python-matplotlib libqt4-sql-sqlite wamerican-insane
+
+if ! dpkg -l | grep --quiet wamerican-insane; then
+    # See /usr/share/doc/dictionaries-common/README.problems for details
+    # http://www.linuxquestions.org/questions/debian-26/dpkg-error-processing-dictionaries-common-4175451951/
+    sudo apt-get install -y wamerican-insane
+    sudo /usr/share/debconf/fix_db.pl
+    sudo dpkg-reconfigure dictionaries-common
+fi
+
+# Install deps for Cucumber tests
+sudo apt-get install ruby-dev xvfb
+sudo gem install mime-types -v 2.6.2
+sudo gem install cucumber capybara capybara-webkit selenium-webdriver rspec capybara-screenshot
+
+sudo apt-get autoremove -y
+
+# Install Chrome browser for Cucumber
+if [ ! -f google-chrome-stable_current_amd64.deb ]; then
+    echo "Installing Chrome"
+    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    sudo dpkg -i google-chrome-stable_current_amd64.deb
+    sudo apt-get -f install -y
+fi
+
+# Install Chromedriver
+if [ ! -f bin/chromedriver_linux64 ]; then
+    echo "Installing Chromedriver"
+    mkdir -p /home/vagrant/bin
+    wget http://chromedriver.storage.googleapis.com/2.20/chromedriver_linux64.zip
+    unzip -d /home/vagrant/bin chromedriver_linux64.zip
+fi
 
 # Hoot Baseline is PostgreSQL 9.1 and PostGIS 1.5, so we need a deb file and
 # then remove 9.4
@@ -57,7 +88,7 @@ if ! ogrinfo --formats | grep --quiet FileGDB; then
     export PATH=/usr/local/lib:/usr/local/bin:$PATH
     cd gdal-1.10.1
     sudo ./configure --with-fgdb=/usr/local/FileGDB_API --with-pg=/usr/bin/pg_config --with-python
-    sudo make -j5
+    sudo make -j$(nproc)
     sudo make install
     cd swig/python
     python setup.py build
@@ -74,6 +105,12 @@ if ! grep --quiet NODE_PATH ~/.profile; then
     echo 'Adding NODE_PATH to user environment'
     echo 'export NODE_PATH=/usr/local/lib/node_modules' >> ~/.profile
     source ~/.profile
+fi
+
+# Module needed for OSM API db test
+if [ ! -d /home/vagrant/.cpan ]; then
+    (echo y;echo o conf prerequisites_policy follow;echo o conf commit)|sudo cpan
+    sudo perl -MCPAN -e 'install XML::Simple'
 fi
 
 # Create Services Database
@@ -129,31 +166,16 @@ sudo service postgresql restart
 
 # Configure and Build
 cd /home/vagrant/hoot
-cp ./conf/DatabaseConfig.sh.orig ./conf/DatabaseConfig.sh
 source ./SetupEnv.sh
 
-echo "Configuring Hoot"
-aclocal && autoconf && autoheader && automake && ./configure -q --with-rnd --with-services
-if [ ! -f LocalConfig.pri ] && ! grep --quiet QMAKE_CXX LocalConfig.pri; then
-    echo 'Customizing LocalConfig.pri'
-    cp LocalConfig.pri.orig LocalConfig.pri
-    echo 'QMAKE_CXX=ccache g++' >> LocalConfig.pri
+# Check that hoot-ui submodule has been init'd and updated
+if [ ! "$(ls -A hoot-ui)" ]; then
+    echo "hoot-ui is empty"
+    echo "init'ing and updating submodule"
+    git submodule init && git submodule update
 fi
-echo "Building Hoot"
-make clean
-make -sj4
-make docs
 
-# Tweak dev environment to make tests run faster
-# FIXME: make this command not destructive to local.conf
-echo 'testJobStatusPollerTimeout=250' > $HOOT_HOME/hoot-services/src/main/resources/conf/local.conf
-
-# Run Tests
-#echo "Running tests"
-#make -sj4 test
-#make -sj4 test-all
-
-# Deploy to Tomcat
+# Configure Tomcat
 if ! grep -i --quiet HOOT /etc/default/tomcat6; then
 echo "Configuring tomcat6 environment"
 sudo bash -c "cat >> /etc/default/tomcat6" <<EOT
@@ -179,10 +201,23 @@ umask 002
 EOT
 fi
 
+# Change Tomcat java opts
+if grep -i --quiet '^JAVA_OPTS=.*\-Xmx128m' /etc/default/tomcat6; then
+    echo "Changing Tomcat java opts"
+    sudo sed -i.bak "s@\-Xmx128m@\-Xms512m \-Xmx2048m \-XX:PermSize=512m \-XX:MaxPermSize=4096m@" /etc/default/tomcat6
+fi
+
 # Fix env var path for GDAL_DATA
 if grep -i --quiet 'gdal/1.10' /etc/default/tomcat6; then
     echo "Fixing Tomcat GDAL_DATA env var path"
     sudo sed -i.bak s@^GDAL_DATA=.*@GDAL_DATA=\/usr\/local\/share\/gdal@ /etc/default/tomcat6
+fi
+
+# Remove gdal libs installed by libgdal-dev that interfere with
+# renderdb-export-server using gdal libs compiled from source (fgdb support)
+if [ -f /usr/lib/libgdal.* ]; then
+    echo "Removing GDAL libs installed by libgdal-dev"
+    sudo rm /usr/lib/libgdal.*
 fi
 
 # Create Tomcat context path for tile images
@@ -197,17 +232,49 @@ if ! grep -i --quiet 'allowLinking="true"' /etc/tomcat6/context.xml; then
     sudo sed -i.bak "s@^<Context>@<Context allowLinking=\"true\">@" /etc/tomcat6/context.xml
 fi
 
-# Deploy to Tomcat
-echo "Stopping Tomcat"
-sudo service tomcat6 stop
-echo "Deploying Hoot to Tomcat"
-sudo -u tomcat6 scripts/vagrantDeployTomcat.sh
-echo "Starting Tomcat"
-sudo service tomcat6 start
-
 # Create directory for webapp
 if [ ! -d /usr/share/tomcat6/.deegree ]; then
     echo "Creating directory for webapp"
     sudo mkdir /usr/share/tomcat6/.deegree
     sudo chown tomcat6:tomcat6 /usr/share/tomcat6/.deegree
 fi
+
+# Tweak dev environment to make tests run faster
+if [ ! -f $HOOT_HOME/hoot-services/src/main/resources/conf/local.conf ]; then
+    echo 'testJobStatusPollerTimeout=250' > $HOOT_HOME/hoot-services/src/main/resources/conf/local.conf
+fi
+
+# Update the init.d script for node-mapnik-server
+sudo cp node-mapnik-server/init.d/node-mapnik-server /etc/init.d
+sudo chmod a+x /etc/init.d/node-mapnik-server
+# Make sure all npm modules are installed
+cd node-mapnik-server
+npm install
+cd ..
+
+# Update marker file date now that dependency and config stuff has run
+# The make command will exit and provide a warning to run 'vagrant provision'
+# if the marker file is older than this file (VagrantProvision.sh)
+touch Vagrant.marker
+
+# Build Hoot
+echo "Configuring Hoot"
+aclocal && autoconf && autoheader && automake && ./configure -q --with-rnd --with-services
+if [ ! -f LocalConfig.pri ] && ! grep --quiet QMAKE_CXX LocalConfig.pri; then
+    echo 'Customizing LocalConfig.pri'
+    cp LocalConfig.pri.orig LocalConfig.pri
+    echo 'QMAKE_CXX=ccache g++' >> LocalConfig.pri
+fi
+echo "Building Hoot"
+make clean -sj$(nproc)
+make -sj$(nproc)
+make docs -sj$(nproc)
+
+# Run Tests
+#echo "Running tests"
+#make -sj$(nproc) test
+#make -sj$(nproc) test-all
+
+# Deploy to Tomcat
+echo "Deploying Hoot to Tomcat"
+sudo -u tomcat6 scripts/vagrantDeployTomcat.sh
